--- a/Kanka.NET/Kanka.NET.csproj
+++ b/Kanka.NET/Kanka.NET.csproj
@@ -9,7 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Humanizer.Core" Version="2.13.14" />
-    <PackageReference Include="RestSharp" Version="107.0.2" />
+    <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="RestSharp" Version="107.1.1" />
   </ItemGroup>
 
 </Project>
